# guilds

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: consts.rs  error.rs  instruction.rs  lib.rs  sdk.rs
api/src/state/: config.rs  mod.rs
program/: Cargo.toml
program/src/: delegate.rs  initialize.rs  invite.rs  join.rs  leave.rs  lib.rs  new_guild.rs  new_member.rs  stake.rs  unstake.rs
